--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -3,10 +3,10 @@ HEADERS = src/headers
 OUT = build
 
 export OBJ
+OBJ += $(OUT)/pattern.o
 OBJ += $(OUT)/switch.o
-OBJ += $(OUT)/state.o
-OBJ += $(OUT)/shift.o
 OBJ += $(OUT)/timer.o
+OBJ += $(OUT)/spi.o
 OBJ += $(OUT)/main.o
 
 CC = msp430-gcc
@@ -17,6 +17,8 @@ help:
 	@echo "Tasks: clean, build, flash, all"
 
 all: | clean build flash
+
+rebuild: | clean build
 
 clean:
 	@echo "Clean"
@@ -47,9 +49,9 @@ $(OUT)/main.o: $(SOURCES)/main.c $(HEADERS)/*.h
 	@echo "Compile $<";\
 	$(CC) $(CFLAGS) $(INCFLAGS) -c $(SOURCES)/main.c -o $(OUT)/main.o
 
-$(OUT)/shift.o: $(SOURCES)/shift.c $(HEADERS)/shift.h
+$(OUT)/spi.o: $(SOURCES)/spi.c $(HEADERS)/spi.h
 	@echo "Compile $<";\
-	$(CC) $(CFLAGS) $(INCFLAGS) -c $(SOURCES)/shift.c -o $(OUT)/shift.o
+	$(CC) $(CFLAGS) $(INCFLAGS) -c $(SOURCES)/spi.c -o $(OUT)/spi.o
 
 $(OUT)/switch.o: $(SOURCES)/switch.c $(HEADERS)/switch.h
 	@echo "Compile $<";\
@@ -59,9 +61,9 @@ $(OUT)/timer.o: $(SOURCES)/timer.c $(HEADERS)/timer.h
 	@echo "Compile $<";\
 	$(CC) $(CFLAGS) $(INCFLAGS) -c $(SOURCES)/timer.c -o $(OUT)/timer.o
 
-$(OUT)/state.o: $(SOURCES)/state.c $(HEADERS)/state.h
+$(OUT)/pattern.o: $(SOURCES)/pattern.c $(HEADERS)/pattern.h
 	@echo "Compile $<";\
-	$(CC) $(CFLAGS) $(INCFLAGS) -c $(SOURCES)/state.c -o $(OUT)/state.o
+	$(CC) $(CFLAGS) $(INCFLAGS) -c $(SOURCES)/pattern.c -o $(OUT)/pattern.o
 
 .SILENT: clean build-dir wait
 .PHONY: clean build-dir flash build
